--- a/Tex/src/myRef.bib
+++ b/Tex/src/myRef.bib
@@ -1,3 +1,22 @@
+@article{SilberschatzK1980,
+ author = {Silberschatz, Abraham and Kedem, Zvi},
+ title = {Consistency in Hierarchical Database Systems},
+ journal = {J. ACM},
+ issue_date = {Jan. 1980},
+ volume = {27},
+ number = {1},
+ month = jan,
+ year = {1980},
+ issn = {0004-5411},
+ pages = {72--80},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/322169.322176},
+ doi = {10.1145/322169.322176},
+ acmid = {322176},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
 @inproceedings{AragonS1989,
   author    = {Cecilia R. Aragon and
                Raimund Seidel},
@@ -11,6 +30,22 @@
   doi       = {10.1109/SFCS.1989.63531},
   timestamp = {Wed, 03 Sep 2014 11:25:58 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/focs/AragonS89},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{HerlihyW1990,
+  author    = {Maurice Herlihy and
+               Jeannette M. Wing},
+  title     = {Linearizability: {A} Correctness Condition for Concurrent Objects},
+  journal   = {{ACM} Trans. Program. Lang. Syst.},
+  year      = {1990},
+  volume    = {12},
+  number    = {3},
+  pages     = {463--492},
+  url       = {http://doi.acm.org/10.1145/78969.78972},
+  doi       = {10.1145/78969.78972},
+  timestamp = {Thu, 04 Sep 2014 14:28:12 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/toplas/HerlihyW90},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
