Graphs added to evaluation section

--- a/Tex/src/algorithm.tex
+++ b/Tex/src/algorithm.tex
@@ -162,12 +162,11 @@ of the optimistic read phase.
 			}
 		\end{algorithmic}
 	\end{subfigure}
-	\bigskip
-	\hline
+	%\bigskip
+	%\hline
 	\end{center}
 	\caption{
 			\label{figure:transformation}}
 \end{figure*}
-
 
 %END CODE 
