--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -37,6 +37,11 @@
 \usepackage[noend]{algpseudocode}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{tikz}
+\usepackage{pgfplots}
+
+\input{plotsStyle}
+
 
 \input{macros}
 
