fixing sections ref in introduction

--- a/Tex/src/algorithm.tex
+++ b/Tex/src/algorithm.tex
@@ -1,4 +1,4 @@
-\section{\ldots}
+\section{\ldots}\label{sec:algorithm}
 %The main idea: 
 We address the problem of introducing 
 optimism to a pessimistic locking protocol. 
