--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -118,11 +118,11 @@ keyword1, keyword2
 \input{proof}
 \input{evaluation}
 \input{related}
+\input{discussion}
+%\appendix
+%\section{Appendix Title}
 
-\appendix
-\section{Appendix Title}
-
-This is the text of the appendix, if you need one.
+%This is the text of the appendix, if you need one.
 
 \acks
 
@@ -130,12 +130,13 @@ Acknowledgments, if needed.
 
 % We recommend abbrvnat bibliography style.
 
-\bibliographystyle{abbrvnat}
+
 
 % The bibliography should be embedded for final submission.
 
 \bibliography{myRef}
-\bibliographystyle{plain}
+\bibliographystyle{abbrvnat}
+%\bibliographystyle{plain}
 
 %Maya:  Commented out template bib
 %\begin{thebibliography}{}
