--- a/Tex/src/evaluation.tex
+++ b/Tex/src/evaluation.tex
@@ -1,4 +1,4 @@
-\section{Evaluation}
+\section{Evaluation}\label{sec:eval}
 In order to apply our approach to a data structure, a
 ''black-box'' pessimistic locking is required. One such 
 approach was presented in \cite{Gueta2011}, automatically 
