--- a/Tex/src/introduction.tex
+++ b/Tex/src/introduction.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\section{Introduction} \label{sec:intro}
 
 The steady increase in the number of  cores in today's computers is driving software developers to allow more parallelism. 
 Indeed, many recent works have developed scalable concurrent data structures~\cite{bronson,dana,citrus,etc}. 
