--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -41,3 +41,7 @@
 \newcommand{\domTree}{Domination-Tree\xspace} 
 \newcommand{\domTreap}{Domination-Treap\xspace}
 \newcommand{\getOP}{\textsc{get}\xspace}
+
+
+%---------Comments -----------------------%
+\newcommand{\Idit}[1]{\textbf{#1}}
