--- a/Tex/src/plots/balanced.tex
+++ b/Tex/src/plots/balanced.tex
@@ -1,6 +1,22 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,balanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
+{results/100C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
+{results/100C20K.txt}; 
+\addplot [darkspringgreen,mark=triangle*] table [x={threads}, y={Bronson}]
+{results/100C20K.txt}; 
+\addplot [coralred,mark=*] table [x={threads}, y={JavaSkipList}]
+{results/100C20K.txt};
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockTreap}]
+{results/100C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
+{results/100C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,balanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
 {results/100C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
 {results/100C200K.txt}; 
@@ -12,8 +28,6 @@
 {results/100C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
 {results/100C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -38,6 +52,22 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,balanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
+{results/70C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
+{results/70C20K.txt}; 
+\addplot [darkspringgreen,mark=triangle*] table [x={threads}, y={Bronson}]
+{results/70C20K.txt}; 
+\addplot [coralred,mark=*] table [x={threads}, y={JavaSkipList}]
+{results/70C20K.txt};
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockTreap}]
+{results/70C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
+{results/70C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,balanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
 {results/70C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
 {results/70C200K.txt}; 
@@ -49,8 +79,6 @@
 {results/70C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
 {results/70C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -75,6 +103,22 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,balanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
+{results/50C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
+{results/50C20K.txt}; 
+\addplot [darkspringgreen,mark=triangle*] table [x={threads}, y={Bronson}]
+{results/50C20K.txt}; 
+\addplot [coralred,mark=*] table [x={threads}, y={JavaSkipList}]
+{results/50C20K.txt};
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockTreap}]
+{results/50C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
+{results/50C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,balanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
 {results/50C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
 {results/50C200K.txt}; 
@@ -86,8 +130,6 @@
 {results/50C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
 {results/50C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -112,6 +154,22 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,balanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
+{results/0C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
+{results/0C20K.txt}; 
+\addplot [darkspringgreen,mark=triangle*] table [x={threads}, y={Bronson}]
+{results/0C20K.txt}; 
+\addplot [coralred,mark=*] table [x={threads}, y={JavaSkipList}]
+{results/0C20K.txt};
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockTreap}]
+{results/0C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
+{results/0C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,balanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutTreap}]
 {results/0C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={DanaAVL}]
 {results/0C200K.txt}; 
@@ -123,8 +181,6 @@
 {results/0C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingTreap}]
 {results/0C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
