--- a/Tex/src/plots/unbalanced.tex
+++ b/Tex/src/plots/unbalanced.tex
@@ -1,6 +1,18 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,unbalanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/100C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
+{results/100C20K.txt}; 
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/100C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/100C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
 {results/100C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
 {results/100C200K.txt}; 
@@ -8,8 +20,6 @@
 {results/100C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
 {results/100C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -30,6 +40,18 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,unbalanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/70C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
+{results/70C20K.txt}; 
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/70C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/70C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
 {results/70C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
 {results/70C200K.txt}; 
@@ -37,8 +59,6 @@
 {results/70C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
 {results/70C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -59,6 +79,18 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,unbalanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/50C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
+{results/50C20K.txt}; 
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/50C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/50C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
 {results/50C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
 {results/50C200K.txt}; 
@@ -66,8 +98,6 @@
 {results/50C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
 {results/50C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -88,6 +118,18 @@
 \begin{tikzpicture}
 \begin{axis}[mystyle,unbalanced]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/0C20K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
+{results/0C20K.txt}; 
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/0C20K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/0C20K.txt};
+\end{axis}
+\end{tikzpicture}
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
 {results/0C200K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
 {results/0C200K.txt}; 
@@ -95,8 +137,6 @@
 {results/0C200K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
 {results/0C200K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
