correct format (9pt)

--- a/Tex/src/document.tex
+++ b/Tex/src/document.tex
@@ -20,7 +20,7 @@
 %-----------------------------------------------------------------------------
 
 
-\documentclass[preprint,11pt]{sigplanconf}
+\documentclass[preprint]{sigplanconf}
 
 % The following \documentclass options may be useful:
 
@@ -124,9 +124,9 @@ keyword1, keyword2
 
 %This is the text of the appendix, if you need one.
 
-\acks
+%\acks
 
-Acknowledgments, if needed.
+%Acknowledgments, if needed.
 
 % We recommend abbrvnat bibliography style.
 
