--- a/Tex/src/plots/unbalanced.tex
+++ b/Tex/src/plots/unbalanced.tex
@@ -1,5 +1,7 @@
 \begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
+\begin{axis}[mystyle,unbalanced,
+			title=100\% read-only operations,
+			ylabel = {Key range [$0,2\cdot10^4$]},]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
 {results/100C20K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
@@ -11,73 +13,7 @@
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/100C200K.txt}; 
-\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/100C200K.txt}; 
-\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/100C200K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/100C200K.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/100C2000K.txt}; 
-\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/100C2000K.txt}; 
-\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/100C2000K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/100C2000K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
-\end{axis}
-\end{tikzpicture}
-
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/70C20K.txt}; 
-\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/70C20K.txt}; 
-\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/70C20K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/70C20K.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/70C200K.txt}; 
-\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/70C200K.txt}; 
-\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/70C200K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/70C200K.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/70C2000K.txt}; 
-\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/70C2000K.txt}; 
-\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/70C2000K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/70C2000K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
-\end{axis}
-\end{tikzpicture}
-
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
+\begin{axis}[mystyle,unbalanced, title=50\% read-only operations]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
 {results/50C20K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
@@ -89,15 +25,28 @@
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
+\begin{axis}[mystyle,unbalanced, title=0\% read-only operations]
 \addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/50C200K.txt}; 
+{results/0C20K.txt}; 
 \addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/50C200K.txt}; 
+{results/0C20K.txt}; 
 \addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/50C200K.txt};
+{results/0C20K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/50C200K.txt};
+{results/0C20K.txt};
+\end{axis}
+\end{tikzpicture}
+
+\begin{tikzpicture}
+\begin{axis}[mystyle,unbalanced,ylabel = {Key range [$0,2\cdot10^6$]},]
+\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
+{results/100C2000K.txt}; 
+\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
+{results/100C2000K.txt}; 
+\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
+{results/100C2000K.txt};
+\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
+{results/100C2000K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -110,33 +59,6 @@
 {results/50C2000K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
 {results/50C2000K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
-\end{axis}
-\end{tikzpicture}
-
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/0C20K.txt}; 
-\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/0C20K.txt}; 
-\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/0C20K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/0C20K.txt};
-\end{axis}
-\end{tikzpicture}
-\begin{tikzpicture}
-\begin{axis}[mystyle,unbalanced]
-\addplot [blues3,mark=square*] table [x={threads}, y={TimeoutBinaryTree}]
-{results/0C200K.txt}; 
-\addplot [orange,mark=diamond*] table [x={threads}, y={Danaunbalanced}]
-{results/0C200K.txt}; 
-\addplot [gray,mark=asterisk] table [x={threads}, y={GlobalLockBinaryTree}]
-{results/0C200K.txt};
-\addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
-{results/0C200K.txt};
 \end{axis}
 \end{tikzpicture}
 \begin{tikzpicture}
@@ -149,8 +71,6 @@
 {results/0C2000K.txt};
 \addplot [black,mark=x] table [x={threads}, y={DominationLockingBinaryTree}]
 {results/0C2000K.txt};
-%\addplot  [magenta,mark=pentagon] table [x={threads}, y={rb}]
-% {results/100C200K.txt};
 \end{axis}
 \end{tikzpicture}
 
