--- a/Tex/src/macros.tex
+++ b/Tex/src/macros.tex
@@ -1,6 +1,7 @@
 %-------------Theorem Definitions ---------------%
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{claim}[theorem]{Claim}
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{corollary}[theorem]{Corollary}
 
